fixed the nav bar on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -232,17 +232,19 @@ header{
     .menu{
         cursor: pointer;
     }
-    .nav{
+
+    .nav {
         z-index: 1;
-        position: absolute;
+        position: fixed;
+        padding-top: 20px;
         left: 0%;
-        top: 20%;
+        top: 0;
         display: none;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         width: 200px;
-        height: 100%;
+        height: 120vh;
         background: #fafafa;
     }
     
